# ai-automation-framework

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup_framework.py  test_heal.py  test_wa.py  test_wa2.py  test_wa3.py
config/: config.yaml
src/autofw/: __init__.py  conftest.py  driver_factory.py
src/autofw/core/: __init__.py  config.py  constants.py  exceptions.py
src/autofw/elements/: __init__.py
src/autofw/healing/: __init__.py  ai_healer.py  cache.py  heuristics.py
src/autofw/locator/: __init__.py
src/autofw/pages/: __init__.py
src/autofw/utils/: __init__.py  logger.py  wait.py
tests/android/: test_onboarding.py  test_sample.py
tests/android/pages/: sample_page.py
tests/ios/: test_sample.py  test_welcome.py
tests/ios/pages/: sample_page.py
tests/unit/: test_core.py  test_healing.py  test_locator.py
tests/web/: test_login.py  test_sample.py  test_whatsapp.py
tests/web/pages/: login_page.py  sample_page.py  whatsapp_page.py
